--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -27,23 +27,22 @@
                 <h4><a href="/admin/home">Ecommerce</a></h4> 
             </div>
             <div class="items">
-                <a id="nav_link" href="/admin/dashboard"><li><div class="menu_icon"><i class="fa-solid fa-chart-pie"></i><p id="post_menu">Dashboard</p></div></li></a>
-                <a id="nav_link" href="/admin/profile"><li><div class="menu_icon"><i class="fa-solid fa-circle-check"></i><p id="post_menu" href="#">Profile</p></div></li></a>
-                <li><div class="menu_icon"><i class="fa-solid fa-feather" style="font-style: normal; font-size: 16px;"></i> <p class="post_menu" style="color: rgb(102, 110, 14)">Post</p></div>
+                <a id="nav_link" href="/admin/dashboard"><li><div class="menu_icon"><i class="fa-solid fa-chart-pie"></i><p id="post_menu">dashboard</p></div></li></a>
+                <a id="nav_link" href="/admin/profile"><li><div class="menu_icon"><i class="fa-solid fa-circle-check"></i><p id="post_menu" href="#">profile</p></div></li></a>
+                <li><div class="menu_icon"><i class="fa-solid fa-feather" style="font-style: normal; font-size: 16px;"></i> <p class="post_menu" style="color: rgb(102, 110, 14)">message</p></div>
                     <ul class='dropdown' id="drop_down_post">
-                        <a id="nav_link item_post" href="/admin/post"><li>Add New</li></a>
-                        <a href="/admin/all-post"><li>All Post</li></a>
-                        <a href="/admin/edit-category"><li>Category</li></a>
-                        <a href="#"><li>Tags</li></a>
+                        <a id="nav_link item_post" href="/admin/add-message"><li>add New</li></a>
+                        <a href="/admin/all-post"><li>all messages</li></a>
+                        <a href="/admin/edit-category"><li>category</li></a>
+                        <a href="#"><li>tags</li></a>
                     </ul>
                 </li>
-                <a id="nav_link" href="/admin/edit-admin/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Edit</p></div></li></a>
-                <a id="nav_link" href="/admin/add"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Add</p></div></li></a>
-                <a id="nav_link" href="/admin/orders"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">Orders</p></div></li></a>
-                <a id="nav_link" href="/admin/inbox"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Inbox</p></div></li></a>
-                <a id="nav_link" href="/admin/users"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Users</p></div></li></a>
-                <a id="nav_link"href="#"><li><div class="menu_icon"><i class="fa-solid fa-gear"></i><p id="post_menu" href="#">Settings</p></div></li></a>
-                <a id="nav_link"href="/logout"><li><div class="menu_icon"> <i class="fa-solid fa-gear"></i><p id="post_menu" href="#">Logout</p></div></li></a>
+                <a id="nav_link" href="/admin/edit-admin/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">edit</p></div></li></a>
+                <a id="nav_link" href="/admin/add"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">add</p></div></li></a>
+                <a id="nav_link" href="/admin/orders"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">orders</p></div></li></a>
+                <a id="nav_link" href="/admin/inbox"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">inbox</p></div></li></a>
+                <a id="nav_link"href="#"><li><div class="menu_icon"><i class="fa-solid fa-gear"></i><p id="post_menu" href="#">settings</p></div></li></a>
+                <a id="nav_link"href="/logout"><li><div class="menu_icon"> <i class="fa-solid fa-gear"></i><p id="post_menu" href="#">logout</p></div></li></a>
             </div>
          </section>
          <section id="interface" style="overflow: scroll;">
