--- a/views/seller/customer.ejs
+++ b/views/seller/customer.ejs
@@ -53,7 +53,7 @@
             <!--  For profile bar -->
         </nav>
         <!-- for site name -->
-        <div class="site_logo" style="display: flex; padding: 5px; justify-content: space-between; background: #edeef0;">
+        <div class="site_logo">
             <div class="sub_class_menu" style="display: flex;">
                 <a href="/seller/home"><li class="cat_nav" style="padding: 10px;">All</li></a>
                 <a href="/seller/commodity"><li class="cat_nav" style="padding: 10px;">Commodities</li></a>
