--- a/views/seller/post.ejs
+++ b/views/seller/post.ejs
@@ -39,7 +39,6 @@
                     </ul>
                 </li>
                 <a id="nav_link" href="/seller/edit-admin/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Edit</p></div></li></a>
-                <a id="nav_link" href="/seller/orders"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">Orders</p></div></li></a>
                 <a id="nav_link" href="/seller/inbox"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Inbox</p></div></li></a>
                 <a id="nav_link" href="/seller/users"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Users</p></div></li></a>
                 <a id="nav_link"href="#"><li><div class="menu_icon"><i class="fa-solid fa-gear"></i><p id="post_menu" href="#">Settings</p></div></li></a>
@@ -110,7 +109,7 @@
                          <% } 
                     %>
         
-        <div class="table-responsive" style="margin: 0 10rem 0 10rem;">
+        <div class="table-responsive">
             <% if(data.length == 0) {%>
             <h2>No item found</h2>
             <%} else { %>
@@ -142,20 +141,13 @@
                             </td>
                       </tr>
                       <% } %>
-                      <tr>
-                        <td>Total Price:</td>
 
-                      </tr>
-                      <tr>
-                        <td>
-                            <form action='/seller/delete-post/' method="post">
-                                    <button class="btn btn-danger" type="submit">Clear All Post</button>
-                            </form>
-                        </td>
-                      </tr>
                     </tbody>
+                    
                   </table>
-
+                  <form action='/seller/delete-post/' method="post">
+                                    <button class="btn btn-danger" type="submit">Clear All Post</button>
+                    </form>
                 <%
                 }
                 %>
