--- a/views/users/account.ejs
+++ b/views/users/account.ejs
@@ -29,7 +29,7 @@
             <div class="items">
                 <a id="nav_link" href="/user/account"><li><div class="menu_icon"><i class="fa-solid fa-circle-check"></i><p id="post_menu" href="#">profile</p></div></li></a>
                 <a id="nav_link" href="/user/mycart"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">cart(<% if (typeof data.cart !== "undefined") { %> <%= data.cart.items.length %> <% } else { %> 0 <% } %>)</p></div></li></a>
-                <a id="nav_link" hre+f="/user/inbox"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">inbox</p></div></li></a>
+                <a id="nav_link" href="/user/inbox"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">inbox</p></div></li></a>
                 <a id="nav_link" href='/user/all_orders'><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">orders</p></div></li></a>
                 <a id="nav_link" href="/user/saved"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">saved</p></div></li></a>
                 <a id="nav_link" href="/user/settings"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">settings</p></div></li></a>
