--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -28,20 +28,20 @@
                 <h4><a href="/admin/home">Ecommerce</a></h4> 
             </div>
             <div class="items">
-                <a id="nav_link" href="/user/account"><li><div class="menu_icon"><i class="fa-solid fa-circle-check"></i><p id="post_menu" href="#">Profile</p></div></li></a>
-                <a id="nav_link" href="/user/mycart"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Cart(
+                <a id="nav_link" href="/user/account"><li><div class="menu_icon"><i class="fa-solid fa-circle-check"></i><p id="post_menu" href="#">profile</p></div></li></a>
+                <a id="nav_link" href="/user/mycart"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">cart(
                     <% if (typeof cart !== "undefined") { %>
                         <%= cart.items.length %>
                     <% } else { %>
                         0
                     <% } %>
                 )</p></div></li></a>
-                <a id="nav_link" href="/user/inbox"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Inbox</p></div></li></a>
-                <a id="nav_link" href="/user/pending"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">Pending</p></div></li></a>
-                <a id="nav_link" href="/user/saved"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Saved</p></div></li></a>
-                <a id="nav_link" href="/user/settings"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Settings</p></div></li></a>
-                <a id="nav_link" href="/user/edit/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Edit</p></div></li></a>
-                <a id="nav_link"href="/logout"><li><div class="menu_icon"> <i class="fa-solid fa-gear"></i><p id="post_menu" href="#">Logout</p></div></li></a>
+                <a id="nav_link" href="/user/inbox"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">inbox</p></div></li></a>
+                <a id="nav_link" href="/user/all_orders"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">orders</p></div></li></a>
+                <a id="nav_link" href="/user/saved"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">saved</p></div></li></a>
+                <a id="nav_link" href="/user/settings"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">settings</p></div></li></a>
+                <a id="nav_link" href="/user/edit/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">edit</p></div></li></a>
+                <a id="nav_link"href="/logout"><li><div class="menu_icon"> <i class="fa-solid fa-gear"></i><p id="post_menu" href="#">logout</p></div></li></a>
             </div>
          </section>
          <section id="interface" style="display: block; overflow: scroll;">
