--- a/views/users/registration.ejs
+++ b/views/users/registration.ejs
@@ -25,51 +25,47 @@
         </nav> --> 
 
          <section id="interface" style="width: 100%; overflow: scroll; ">
-            <nav style="position: fixed; width: 100%; z-index: 99;">
+            <nav>
                 <!-- For search bar -->
                 <div class="logo"><a href="">Ecommerce</a></div>
-                <input type="text" placeholder="New search here..." class="search_field">
-                <div class="search_bar" style="display: none;">
-                    <i class="fa-solid fa-magnifying-glass" id="lens"></i>
-                    <i class="fa-sharp fa-solid fa-xmark" id="closeBtn"></i>
-                </div>
-                <div class="n1">
+    
+                <div class="n1 ham_nav">
                     <!-- for icon -->
-                    <label class="nav-toggler" for="toggle">
+                    <label class="nav-toggler menu-toggle" id="mobile-menu" for="toggle">
                         <span class="bar"></span>
                         <span class="bar"></span>
                         <span class="bar"></span>
                     </label>
-
                     <div class="search_">
                         <div class="search_icon">
                             <ul>
                                 <li class="offers"><i class="fa-solid fa-user"></i>
                                     <a id="nav_link" href="#">Account</a>
                                     <ul class='dropdown'>
-                                        <li><a href="/user/login">Sign In</a></li>
-                                        <li><a href="/user/register">Register</a></li>
-                                        <li><a href="#">About</a></li>
-                                        <li><a href="#">What's New</a></li>
+                                        <a href="/user/login"><li>Log In </li></a>
+                                        <a href="/user/register"><li>Register</li></a>
+                                        <a href="#"><li>About</li></a>
+                                        <a href="#"><li>What's New</li></a>
                                     </ul>
                                 </li>
                                 <li class="offers"><i class="fa-solid fa-circle-info"></i></i> <a id="nav_link" href="#">Q/E</a></li>
                                 <li class="offers"><i class="fa-solid fa-cart-shopping"></i><a id="nav_link" href="#">Orders</a></li>                
-                                <li class="_more"><i class="fa-solid fa-angle-down"></i>
-                                <a href="#">More</a>
-                                <ul class='dropdown'>
-                                    <li><a href="/user/login">Sign In</a></li>
-                                    <li><a href="/user/register">Register</a></li>
-                                    <li><a href="#">Q/E</a></li>
-                                    <li><a href="#">Notification</a></li>
-                                </ul>
-                                </li>
+                                
+    
                             </ul>
                         </div>
                     </div>
+                    <div class="MyNav">
+                        <ul>
+                            <a href="/user/login"><li>login</li></a>
+                            <a href="/user/Register"><li>register</li></a>
+                            <a href="#"><li>about</li></a>
+                            <a href="#"><li>what's New</li></a>
+                        </ul>
+                    </div>
                 </div>
                 <!--  For profile bar -->
-        </nav>
+            </nav>
 
               <!-- Register Form -->
 
@@ -156,7 +152,7 @@
                     </div>
     
                     <div class="col">
-                            <label for="details" id="form_text"><b>User Details:</b></label>
+                            <p for="details"><b>User Details:</b></p>
                             <textarea class="form-contol" name="details" id="details" cols="30" rows="12" placeholder="Customer details"></textarea>
                             
                     </div>
@@ -195,5 +191,6 @@
     <script src="/public/scripts/scripts.js"></script>
     <script src="/public/scripts/admin.js"></script>
     <script src="/public/scripts/index.js"></script>
+    <script src="/public/scripts/home_harm.js"></script>
 </body>
 </html>
