--- a/public/css/added.css
+++ b/public/css/added.css
@@ -46,8 +46,6 @@ button {
 }
 
 html{
-    scroll-behavior: smooth;
-    overflow : scroll;
     overflow-x: hidden;
     font-family: "inter", sans-serif;
     font-size: var(--fs-base);
@@ -59,16 +57,7 @@ html{
 /* scrollbar */
 
    
-  body::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
-  }
 
-
-.light-theme::-webkit-scrollbar-thumb { border-color: hsl(0, 0%, 90%) }
-.dark-theme::-webkit-scrollbar-thumb { border-color: hsl(219,27%, 20%) }
-.light-theme::-webkit-scrollbar-track { border-color: hsl(0, 0%, 90%) }
-.dark-theme::-webkit-scrollbar-track { border-color: hsl(219, 27%, 20%) }
 
 /* base style */
 .h1,
@@ -242,30 +231,39 @@ html{
     width: 100%;
     padding: 10px 0 0 0;
 }
+.site_logo{
+    display: flex;
+    padding: 5px; 
+    justify-content: space-between; 
+    background: #edeef0;
+}
 
 /* trends */
+
 .single_trends{
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: white;
+    height: 100px;
     margin-bottom: 10px;
 }
 .trend_img{
     position: relative;
     display: inline-block; 
-    width: 100%;
+    
     object-fit: contain;
     padding-bottom: 10px;
 }
 .trend_img a img{
     width: 100%;
+    height: 100px;
     object-fit: cover;
 }
 
 
 /* trend image setup */
 .trend_info{
-    align-self: center;
+    align-self: normal;
     padding-left: 5px;
 }
 .trend_h2{
@@ -295,6 +293,8 @@ html{
 .highlights{
     object-fit: contain;
     background: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 .highlights .New{
     position: absolute;
@@ -316,14 +316,13 @@ html{
 }
 
 .scroll-up{
-    position: relative;
+    position: absolute;
     width: 20px;
-    aspect-ratio: 1/1;
     background-color: blue;
     margin-left: 90%;
     text-align: center;
-    margin-bottom: 10px;
-    padding-top: 5px;
+    margin-bottom: 10%;
+    bottom: 0;
     color: white;
 }
 .scroll-up:hover{
@@ -566,14 +565,13 @@ html{
 .background_info{
     position: relative;
     height: 50rem;
-    width: 100%;
-    background-image: url('/public/images/streets.jpg');
+    
+    background-image: url('/public/images/shoper.jpg');
     background-position: center;
     background-size:cover;
 }
 
 .background_details{
-    width: 48rem;
     background-color: rgba(157, 157, 157, 0.1);
     border-radius: 8px;
     text-align: center;
@@ -585,6 +583,7 @@ html{
     box-shadow: 2px 4px 8px rgb(217, 213, 213);
 }
 .admin_post{
+    background: rgb(222, 228, 227);
     display: grid; 
     grid-template-columns:1fr 3fr 1fr; 
     margin-top: 10px; 
@@ -592,7 +591,6 @@ html{
     padding: 0 10px 0 10px;
 }
 .post_block3{
-    background-color: none;
     display: grid;
     grid-template-columns:1fr; 
     margin-top: 350px;
@@ -609,18 +607,21 @@ html{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
-    grid-template-rows: 15rem 15rem;
     padding-top: 20px;
     background-position: center;
 }
 #post_content img{
     width: 100%;
 }
+
 #post_content{
-    background-position: center; background-size:cover; 
+    background-image: url('/public/images/<%= post_data.image %>');
     width: 100%;
-    height: 100%;
-    object-fit: cover; 
+    height: 300px; /* Set your desired height */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
 }
 .admin_post_des{
     text-align: center;
@@ -637,13 +638,15 @@ html{
 }
 /* post_block2 */
 .post_block1{
-    background: rgb(222, 228, 227);
     display: block;
 }
 .trends_image_post{
+    width: 100%;
+    height: 100px; /* Set your desired height */
+    background-size: cover;
     background-position: center;
-    background-size:cover;
-    height: 5rem;
+    background-repeat: no-repeat;
+    position: relative;
 }
 .trends_image_post p{
     padding-left: 20px;
@@ -655,13 +658,39 @@ html{
     background-color: white;
     padding-left: 10px;
 }
-@media(max-width: 900px){
-    .add_cat{
+@media screen and (max-width: 590px){
+    /* home_settings */
+    .home_navs{
         display: block;
+    }
+    .admin_post{
+        display: block;
+    }
+    .links{
+        display: flex;
+        justify-content: space-between;
+        padding: 0 32px 8px 32px;
+        font-size: 15px;
+    }
+    .post_wrap{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    #post_content{
+        background-image: url('/public/images/<%= post_data.image %>');
+        width: 100%;
+        height: 300px; /* Set your desired height */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
     }
 }
 
 @media(max-width: 900px) {
+    .add_cat{
+        display: block;
+    }
     .posts{
         position: relative;
         display: block;
@@ -717,3 +746,4 @@ html{
     border-radius: 10%;
     transition: .4s;
 }
+
