--- a/public/css/user_home.css
+++ b/public/css/user_home.css
@@ -130,4 +130,41 @@ table, th, td {
         left: 2%;
         border: 2px solid rgb(164, 163, 163);
     }
+    
 }
+
+/* messages_user */
+.inbox-container{
+    margin-top: 9%;
+}
+  .messages {
+    background: rgb(250, 247, 247);
+  }
+  .messages ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .messages ul li {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .messages ul li:hover {
+    background-color: #f5f5f5;
+  }
+
+  .messages ul .read {
+    background-color: #eedcb7;
+  }
+  @media screen and (max-width: 70px) {
+       /* messages_user */
+       .inbox-container{
+        margin-top: 19%;
+    }
+  }
