--- a/views/electronics.ejs
+++ b/views/electronics.ejs
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="/public/css/home_view.css">
     <link rel="stylesheet" href="/public/css/added.css">
+    <link rel="stylesheet" href="/public/css/home_view.css">
     <link rel="stylesheet" href="/public/css/admin.css">
     <link rel="stylesheet" href="/public/css/cdn.jsdelivr.net_npm_swiper@10.1.0_swiper-bundle.min.css">
     <script src="https://kit.fontawesome.com/4c4cf0b696.js" crossorigin="anonymous"></script>
@@ -52,7 +52,7 @@
             <!--  For profile bar -->
         </nav>
 
-        <div class="highlights" style="display: flex;">
+        <div class="highlights">
             <div class="New"><h6>What's New</h6></div>
              <!-- Slider main container -->
             <di class="new_trends swiper">
@@ -81,7 +81,7 @@
         </div>
         
         <!-- for site name -->
-        <div class="site_logo" style="display: flex; padding: 5px; justify-content: space-between; background: #edeef0;">
+        <div class="site_logo home_navs">
             <div class="sub_class_menu" style="display: flex;">
                 <a href="#"><li class="cat_nav" style="padding: 10px;">All</li></a>
                 <a href="/commodity"><li class="cat_nav" style="padding: 10px;">Commodities</li></a>
