--- a/views/seller/add-post.ejs
+++ b/views/seller/add-post.ejs
@@ -39,7 +39,6 @@
                     </ul>
                 </li>
                 <a id="nav_link" href="/seller/edit-admin/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Edit</p></div></li></a>
-                <a id="nav_link" href="/seller/orders"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">Orders</p></div></li></a>
                 <a id="nav_link" href="/seller/inbox"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Inbox</p></div></li></a>
                 <a id="nav_link" href="/seller/users"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Customers</p></div></li></a>
                 <a id="nav_link"href="#"><li><div class="menu_icon"><i class="fa-solid fa-gear"></i><p id="post_menu" href="#">Settings</p></div></li></a>
@@ -107,7 +106,7 @@
 
               <!-- users sec -->
             <form id="add_form" action="/seller/post" method="POST" enctype="multipart/form-data">
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px;">
+                <div class="post_data">
                     <div class="row post_details">
                         <label for="title">Title</label>
                         <input type="text" class="form-control" placeholder="Title" name="title" required>
@@ -164,7 +163,7 @@
                         
                 </div>
 
-                <div class="row" style="width: 40%; padding: 10px 0 5px 0;">
+                <div class="row" style="width: 40%; padding: 10px 0 50px 0;">
                         <button type="submit" class="btn btn-primary">Add New</button>
                 </div>
           </form>
