--- a/views/seller/dashboard.ejs
+++ b/views/seller/dashboard.ejs
@@ -39,7 +39,6 @@
                     </ul>
                 </li>
                 <a id="nav_link" href="/seller/edit-admin/:id"><li><div class="menu_icon"><i class="fa-solid fa-feather"></i><p id="post_menu" href="#">Edit</p></div></li></a>
-                <a id="nav_link" href="/seller/orders"><li><div class="menu_icon"><i class="fa-solid fa-list-ul"></i><p id="post_menu" href="#">Orders</p></div></li></a>
                 <a id="nav_link" href="/sellerinbox"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Inbox</p></div></li></a>
                 <a id="nav_link" href="/seller/users"><li><div class="menu_icon"><i class="fa-solid fa-envelope"></i><p id="post_menu" href="#">Users</p></div></li></a>
                 <a id="nav_link"href="#"><li><div class="menu_icon"><i class="fa-solid fa-gear"></i><p id="post_menu" href="#">Settings</p></div></li></a>
@@ -139,14 +138,12 @@
                     </div>
                 <% } %>
 
-                <table class="table table-striped table-sm">
+                <table class="table">
                     <thead>
                         <tr>
                             <th scope="col"></th>
                             <th scope="col">First Name</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Telephone</th>
-                            <th scope="col">Email</th>
+                            <th scope="col">Status</th>
                             <th scope="col" style="color: rgb(5, 70, 34);">Verified</th>
                             <th scope="col" class="test-end">Action</th>
                             <!-- <th scope="col" class="test-end">View/Add</th> -->
@@ -155,20 +152,18 @@
                     </thead>
 
                     <tbody>
-                        <% data.forEach(user => { %>
+                        <% order_info.forEach(user => { %>
                          <tr class="align-middle">
-                            <td><img src="/public/images/<%= user.image %>" alt=""></td>
-                            <td><%= user.firstname %></td>
-                            <td><%= user.lastname %></td>
-                            <td><%= user.role %></td>
-                            <td><%= user.email %></td>
+                            <td><img src="/public/images/<%= user.orderItem.image %>" alt=""></td>
+                            <td><%= user.orderItem.firstname %> <%= user.orderItem.lastname %></td>
+                            <td><%= user.status %></td>
                             <td style="color: green;">Verified: <%= user.is_verified%></td>
                             <td>active</td>
                             <td class="text-end">
 
                                 <div class="d-flex flex-row justify-content-end gap-2">
 
-                                    <a href="/seller/view/<%= user._id %>" type="button" class="btn btn-primary btn-small" >
+                                    <a href="/seller/order_id/<%= user._id %>" type="button" class="btn btn-primary btn-small" >
                                         <i class="bi bi-eye">view</i>
                                     </a>
 
@@ -179,15 +174,6 @@
                         <% }) %>
                     </tbody>
                 </table>
-              </div>
-
-
-              <footer id="more_info">
-                <div class="more_in">
-                    <ul>
-                        <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
                     </ul>
                     <p class="Us">Contact Us:  070367442231</p>
                 </div>
