--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="height: auto;">
+<html lang="en" style="height: auto; overflow-x: hidden;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,9 +22,9 @@
             <!-- For search bar -->
             <div class="logo"><a href="">Ecommerce</a></div>
 
-            <div class="n1">
+            <div class="n1 ham_nav">
                 <!-- for icon -->
-                <label class="nav-toggler" for="toggle">
+                <label class="nav-toggler menu-toggle" id="mobile-menu" for="toggle">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -54,11 +54,25 @@
                         </ul>
                     </div>
                 </div>
+                <div class="MyNav">
+                    <ul>
+                        <a href="/user/account"><li>Profile </li></a>
+                        <a href='/user/mycart'><li> Cart(
+                                <% if (typeof user.cart !== "undefined") { %>
+                                    <%= user.cart.items.length %>
+                                <% } else { %>
+                                    0
+                                <% } %>
+                            )</li></a>
+                        <a href="#"><li>About</li></a>
+                        <a href="#"><li>What's New</li></a>
+                    </ul>
+                </div>
             </div>
             <!--  For profile bar -->
         </nav>
 
-        <div class="highlights" style="display: flex;">
+        <div class="highlights">
             <div class="New"><h6>What's New</h6></div>
              <!-- Slider main container -->
             <di class="new_trends swiper">
@@ -87,7 +101,7 @@
         </div>
         
         <!-- for site name -->
-        <div class="site_logo" style="display: flex; padding: 5px; justify-content: space-between; background: #edeef0;">
+        <div class="site_logo">
             <div class="sub_class_menu" style="display: flex;">
                 <a href="/user/home"><li class="cat_nav" style="padding: 10px;">All</li></a>
                 <a href="/user/commodity"><li class="cat_nav" style="padding: 10px;">Commodities</li></a>
@@ -246,5 +260,6 @@
     <script src="script/home.js"></script>
     <script src="/public/scripts/home_script.js"></script>
     <script src="/public/scripts/more.js"></script>
+    <script src="/public/scripts/home_harm.js"></script>
 </body>
 </html>
