--- a/views/users/services.ejs
+++ b/views/users/services.ejs
@@ -52,7 +52,7 @@
             <!--  For profile bar -->
         </nav>
 
-        <div class="highlights" style="display: flex;">
+        <div class="highlights">
             <div class="New"><h6>What's New</h6></div>
              <!-- Slider main container -->
             <di class="new_trends swiper">
@@ -81,7 +81,7 @@
         </div>
         
         <!-- for site name -->
-        <div class="site_logo" style="display: flex; padding: 5px; justify-content: space-between; background: #edeef0;">
+        <div class="site_logo">
             <div class="sub_class_menu" style="display: flex;">
                 <a href="/user/home"><li class="cat_nav" style="padding: 10px;">All</li></a>
                 <a href="/user/commodity"><li class="cat_nav" style="padding: 10px;">Commodities</li></a>
